--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
-/*Testing commit*/
-/*Pablo's test commit*/
-/*Sowmya's test commit*/
-/*Ridwana's test commit*/
-/*SR test comit*/
+.site-title {
+    font-family: rig-solid-medium-outline, sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 80px;
+    margin: 0 0 0 20px;
+    padding-top: 30px;
+  }
