--- a/public/rid.css
+++ b/public/rid.css
@@ -30,8 +30,17 @@
   }
 
   .font{
+    /*transform: translate(-50%, -50%);*/
     margin-left: auto;
     margin-right: 20px;
+    background: #ffec89;
+    color: blueviolet;
+    padding: 10px;
+    width: 250px;
+    height: 50px;
+    border: none;
+    font-size: 20px;
+    box-shadow: 0 5px 25px rgba(0,0,0,0.5); 
   }
 
   .chosen-font h2{
