--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
     <header>
 
       <div class="header-image-container">
-      <!--  <img src="benny.jpg" alt="ff logo">-->
+      <img src="fflogosmall.png" alt="ff logo">
       </div>
 
       <h1 class="site-title"><a href="#">Font Finder</a></h1>
