--- a/views/body.handlebars
+++ b/views/body.handlebars
@@ -3,7 +3,8 @@
             <label for="font">please select the name of font you would like to match: </label>
             <div class="font">
                 <select id="inputFont" class="dropdown-content" name="filter-city">
-                <option selected value="" value="0">Arial</option>
+                <option selected value="">Choose</option>
+                <option value="0">Arial</option>
                 <option value="1">Arial Black</option>
                 <option value="2">Comic Sans MS</option>
                 <option value="3">Impact</option>
@@ -15,6 +16,7 @@
                 <option value="9">Lucida Console</option>
                 </select>
             </div>
+            <button type="button" id="update">Update</button>
     </div>
 
     {{>output}}
