--- a/views/body.handlebars
+++ b/views/body.handlebars
@@ -1,9 +1,11 @@
 <main class="content">
   <div class="dropdown">
-            <label for="font">please select the name of font you would like to match: </label>
+        <div class="select">
+          <label for="font"> SELECT FONT </label>
+        </div>
             <div class="font">
                 <select id="inputFont" class="dropdown-content" name="filter-city">
-                <option selected value="">Choose</option>
+                <option selected value="10">Choose</option>
                 <option value="0">Arial</option>
                 <option value="1">Arial Black</option>
                 <option value="2">Comic Sans MS</option>
