--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,10 +7,14 @@
     <!--- Rig Solid Font-->
     <link rel="stylesheet" href="https://use.typekit.net/uzy6jyr.css">
 
+    <!-- Rig Solid Bold Fill -->
+    <link rel="stylesheet" href="https://use.typekit.net/uzy6jyr.css">
+
      <!--- Baskerville-->
     <link rel="stylesheet" href="https://use.typekit.net/uzy6jyr.css">
 
-
+    <!-- Rig Solid Bold Reverse -->
+    <link rel="stylesheet" href="https://use.typekit.net/uzy6jyr.css">
 
     <!-- This 3rd-party stylesheet incorporates SVG icons from Font Awesome: http://fontawesome.com/ -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" crossorigin="anonymous">
@@ -27,13 +31,14 @@
 
     <header>
 
-      <div class="header-image-container">
+      <!-- <div class="header-image-container">
       <img src="fflogosmall.png" alt="ff logo">
-      </div>
+      </div> -->
 
-      <h1 class="site-title"><a href="#">Font Finder</a></h1>
+      <h1 class="site-title">Font Finder</h1>
 
     </header>
     {{{body}}}
     </body>
+
 </html>
