--- a/views/partials/output.handlebars
+++ b/views/partials/output.handlebars
@@ -22,8 +22,9 @@
           </span>
         </div>
         <div class="doggo" style="font-family: {{fontPairing}}">
-        <h3> Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz
-                The quick brown fox jumps over the lazy dog
-        </h3>
+        <footer>
+          <h3>Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz</h3>
+          <h3>The quick brown fox jumps over the lazy dog</h3>
+        </footer>
         </div>
 </div>
